Fixes and implementations
